Added a picture amoung others

--- a/CSS/MainPage.css
+++ b/CSS/MainPage.css
@@ -1,9 +1,14 @@
 ﻿#mapid {
-    height: 1500px;
-    width: 1900px;
+    height: 1077px;
+    width: 1885px;
 }
 
 #body {
     padding: 0;
     margin: 0;
+}
+
+img#RepPic
+{
+    height:2000px;
 }
