--- a/CSS/sidebar.css
+++ b/CSS/sidebar.css
@@ -7,6 +7,8 @@
     z-index: 2000;
 }
 
+
+
     .sidebar.collapsed {
         width: 40px;
     }
@@ -125,6 +127,8 @@
         bottom: 0;
     }
 
+ 
+
 .sidebar-content {
     position: absolute;
     top: 0;
@@ -132,6 +136,7 @@
     background-color: rgba(255, 255, 255, 0.95);
     overflow-x: hidden;
     overflow-y: auto;
+    
 }
 
 .sidebar-left .sidebar-content {
@@ -155,10 +160,26 @@
     box-sizing: border-box;
     padding: 10px 20px;
 }
+.RepPic
+{
+    float: left;
+    height:10em;
+    padding-right:2em;
+    padding-top:0.5em;
+}
 
-    .sidebar-pane.active {
-        display: block;
-    }
+.RepName
+{
+    align-content:end;
+    text-align-last:auto;
+    position:relative;
+
+}
+
+
+ .sidebar-pane.active {
+    display: block;
+ }
 
 @media (min-width: 768px) and (max-width: 991px) {
     .sidebar-pane {
@@ -306,4 +327,10 @@
     .sidebar-right.collapsed ~ .sidebar-map .leaflet-right {
         right: 50px;
     }
+}
+
+.img {
+    align-content: space-between;
+    left: 200px;
+    height: 200px;
 }
