--- a/CSS/sidebar.css
+++ b/CSS/sidebar.css
@@ -308,5 +308,14 @@
     }
 }
 
+img#RepImage {
+    height: 140px;
+    width: auto;
+    position: relative;
+    right: -43px;
+}
 
-.sidebar#
+p#RepName {
+    position: relative;
+    left: 4em;
+}
