TXDistric1: - Fixed Bill-name to Billname. - added CSS to buttons: 88% done. - Added upvote and downvote buttons
MainPage:
- Corrected CSS for RepImages

File Structure:
-  Moved website images from /Photos and /Pictures to /Images.
- Deleted Photos folder.
- Deleted Pictures folder

--- a/CSS/MainPage.css
+++ b/CSS/MainPage.css
@@ -30,7 +30,7 @@ div.items p {
         display: block
     }
 
-img#RepImage {
+.RepImage {
     height: 10em;
     width: auto;
     position: relative;
