--- a/CSS/RepPage.css
+++ b/CSS/RepPage.css
@@ -49,27 +49,29 @@ img#RepPicture {
     text-decoration: none;
     padding: 4em;
     margin:1em 1em 1em 1em;
+    position: relative;
+    right: -3em;
 }
 
 
 .bname {
     position: relative;
     top: -6em;
-    left: 6em;
+    left: 7em;
 }
 
 .bID {
     position: relative;
     display:block;
     top: -10em;
-    right: -9em;
+    left: 11em;
     margin:auto;
 }
 
 .blink {
     position: relative;
     top:-10em;
-    right:-9em;
+    right:-11em;
     margin:auto;
     display:block;
 }
@@ -78,7 +80,7 @@ img#RepPicture {
     position: relative;
     margin:auto;
     top:-9em;
-    left:9em;
+    left:11em;
     display:block;
 }
 
@@ -86,7 +88,30 @@ img#RepPicture {
     position: relative;
     display: block;
     top: -9em;
-    right: -9em;
+    right: -11em;
     margin: auto;
 }
+
+.upvotebutton {
+    position: relative;
+    display: block;
+    border-radius: 50%;
+    padding: 1.5em;
+    top: 8em;
+    right: -0.5em;
+    
+
+}
+
+.downvotebutton {
+    position: relative;
+    display: block;
+    border-radius: 50%;
+    right:-0.5em;
+    top: 9em;
+    padding: 1.5em;
+}
  
+.upvotebutton:active {
+    background-color: green;
+}
