TXDistrict1.aspx - changed all the buttons to asp buttons - all buttons now have a onclick function - all buttons are complete except a background image. RepPage.css - Added on :hover to css for green and red like buttons.
TXDistrict1.aspx.cs
- Created setcolor function (100%)
- Created setbilldata function (0% - Template)
- Created button_clicked event handler  function. (100%)
- Created buttonconvert function (100%)
-

--- a/CSS/RepPage.css
+++ b/CSS/RepPage.css
@@ -97,7 +97,7 @@ img#RepPicture {
     display: block;
     border-radius: 50%;
     padding: 1.5em;
-    top: 8em;
+    top: 9em;
     right: -0.5em;
     
 
@@ -108,10 +108,14 @@ img#RepPicture {
     display: block;
     border-radius: 50%;
     right:-0.5em;
-    top: 9em;
+    top: 10em;
     padding: 1.5em;
 }
  
-.upvotebutton:active {
+.upvotebutton:hover {
     background-color: green;
+}
+
+.downvotebutton:hover {
+    background-color: red;
 }
