Added Master Page. Added Banner. Buit out TX 1 & 2 Pages.

--- a/CSS/RepPage.css
+++ b/CSS/RepPage.css
@@ -1,7 +1,12 @@
 ﻿body {
     background-color: #6ABADB;
 }
-
+.Banner {
+    text-align: center;
+}
+.DTitle {
+    text-align: center;
+}
 img#RepPicture {
     position: relative;
     height: auto;
