minor css adjustements

--- a/CSS/Register.css
+++ b/CSS/Register.css
@@ -1,6 +1,5 @@
 ﻿body {
-    
-    background-color: #6abadeba;
+    background-color: #6ABADB;
     font-family: 'Arial';
     background-image: url(../Images/background-reg.jpeg);
     opacity: 1.5;
