--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -1,7 +1,7 @@
 ﻿body {
     margin: 0;
     padding: 0;
-    background-color: #6abadeba;
+    background-color:#6ABADB;
     font-family: 'Arial';
 }
 
