--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -10,7 +10,7 @@
     overflow: hidden;
     margin: 4em auto;
     padding: 5em;
-    background: #23463f;
+    background: #6ABADB;
     border-radius: 2em;
     position: relative;
     box-shadow: 0 1em 1em 0 grey;
