--- a/CSS/Register.css
+++ b/CSS/Register.css
@@ -1,7 +1,6 @@
 ﻿body {
     background-color: #6ABADB;
     font-family: 'Arial';
-    background-image: url(../Images/background-reg.jpeg);
     opacity: 1.5;
 }
 
@@ -47,7 +46,7 @@
     overflow: hidden;
     margin: 4em auto;
     padding: 5em;
-    background: #6ABADB;
+    background: #2f7ae5;
     border-radius: 2em;
     position: relative;
     box-shadow: 0 1em 1em 0 grey;
